WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174135
FrameView should not set RenderView::logicalWidth directly for printing
https://bugs.webkit.org/show_bug.cgi?id=174135
Summary
FrameView should not set RenderView::logicalWidth directly for printing
Antti Koivisto
Reported
2017-07-04 09:18:19 PDT
Renderer logicalWidth should be set by layout. Direct override by RenderView when printing means that we don't layout children in all cases when the width changes. This is currently mostly hidden by spurious layouts but causes problems when trying to fix other things that reduces those.
Attachments
patch
(8.36 KB, patch)
2017-07-04 09:29 PDT
,
Antti Koivisto
zalan
: review+
Details
Formatted Diff
Diff
patch
(8.55 KB, patch)
2017-07-04 10:20 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2017-07-04 09:29:16 PDT
Created
attachment 314569
[details]
patch
Build Bot
Comment 2
2017-07-04 09:30:27 PDT
Attachment 314569
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderView.h:144: The parameter name "size" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3
2017-07-04 10:20:17 PDT
Created
attachment 314571
[details]
patch
WebKit Commit Bot
Comment 4
2017-07-04 10:58:40 PDT
Comment on
attachment 314571
[details]
patch Clearing flags on attachment: 314571 Committed
r219121
: <
http://trac.webkit.org/changeset/219121
>
WebKit Commit Bot
Comment 5
2017-07-04 10:58:41 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2017-07-05 10:20:14 PDT
<
rdar://problem/33136784
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug